--- a/cv_17/dvora135_EMB-cv_17.tex
+++ b/cv_17/dvora135_EMB-cv_17.tex
@@ -157,35 +157,26 @@
 
 
 
-\section{Úkol měření}
-\label{chap:ukol}
-\begin{enumerate}
-    \item 
-    \begin{enumerate}[label=\alph*)]
-        \item 
-    \end{enumerate}
-\end{enumerate}
-
-
-\section{Schéma zapojení}
-\label{chap:schema_zapojeni}
-
-
-
-\section{Seznam použitých přístrojů}
-\label{chap:seznam_pristroju}
-
 
 
 \section{Teoretický úvod}
 \label{chap:teoreticky_uvod}
+Intenzita magnetického podle transformátoru je nejsnáze měří pomocí cívky se vzduchovým jádrem. Jedná-li se o periodické průběhy s jedním průchodem nulou, můžeme magnetické pole spočítat jako
+\begin{equation}
+  B_\text{m}=\frac{U_\text{SAR}}{4\,f\,S\,N}.
+\end{equation}
 
-
+Hodnoty intenzity magnetického pole $H_\text{m}$ vypočteme jako
+\begin{equation}
+  H_\text{m}=\frac{M_\text{m}}{\mu_\text{m}}.
+\end{equation} 
 
 \section{Naměřené hodnoty}
 \label{chap:namerene_hodnoty}
 
-
+% Please add the following required packages to your document preamble:
+% \usepackage[table,xcdraw]{xcolor}
+% If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
 
 \section{Zpracování naměřených hodnot}
 \label{chap:zpracovani_hodnot}
