--- a/cv_17/dvora135_EMB-cv_17.tex
+++ b/cv_17/dvora135_EMB-cv_17.tex
@@ -78,7 +78,7 @@
 %_____________________________|___________________________|_____________________________%
 %                             
 
-\newcommand{\nazev}{}                                                        %
+\newcommand{\nazev}{Měření rozptylového magnetického pole transformátoru}                                                        %
 \newcommand{\jmeno}{Jakub Dvořák}                                                     %
 \newcommand{\datum}{2.11.2020}                                                              %
 %---------------------------------------------------------------------------------------%
@@ -155,8 +155,14 @@
 
 %------------------------------------ VLASTNÍ TEXT ------------------------------------%
 
-
-
+\includegraphics[width=\textwidth]{2.png}
+\newpage
+\includegraphics[width=\textwidth]{3.png}
+\newpage
+\includegraphics[width=\textwidth]{4.png}
+\newpage
+\includegraphics[width=\textwidth]{5.png}
+\newpage
 
 
 \section{Teoretický úvod}
